Fix image align on post/comment display.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -832,6 +832,7 @@
   .author > img {
     border: 1px solid #444;
     margin-bottom: 10px;
+    float: right;
   }
 
   .endorsement a {
